--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                 </div>
                 <div class="row">
                     <div class="flex">
-                        <div class="">
+                        <div class="svg-ok">
                             <svg xmlns="http://www.w3.org/2000/svg" width="56" height="64" viewBox="0 0 56 64">
                                 <g>
                                     <g>
