included flex container

--- a/index.html
+++ b/index.html
@@ -14,8 +14,12 @@
         <p>Aqui vai o header</p>
     </header> -->
 
+
+    <!--inicio do MAIN-->
+
     <main class="main" id="main">
-        <div class="container">
+        <div class="container-main">
+
             <!-- BUTTON VOLTAR -->
             <div class="row">
                 <div class="voltar">
@@ -33,17 +37,15 @@
                     </button>
                 </div>
             </div>
-        </div>
-        <!-- / BUTTON VOLTAR -->
+            <!-- / BUTTON VOLTAR -->
 
-        <section>
-            <div class="container bg-gray">
+    <section>
+            <div class="bg-gray">
                 <div class="row">
                     <h1>Cartões Savegnago</h1>
                 </div>
-                <div class="row">
-                    <div class="flex">
-                        <div class="svg-ok">
+                    <div class="row">
+                        <div class="flex-ok">
                             <svg xmlns="http://www.w3.org/2000/svg" width="56" height="64" viewBox="0 0 56 64">
                                 <g>
                                     <g>
@@ -91,17 +93,14 @@
                                 </g>
                             </svg>
                         </div>
-                        <div class="">
-                            <p class="texto-main">
-                                Com o <strong>nosso cartão
-                                    savegnago</strong> e o <strong>cartão
-                                    alimentação savegnago</strong>
-                                você economiza muito mais!
-                            </p>
-                        </div>
 
+                            <p class="texto-main">
+                                Com o nosso cartão savegnago e o cartão alimentação savegnago você economiza muito mais!
+                            </p>
                     </div>
                 </div>
+
+
                 <div class="row">
                     <div class="banner-cartao">
                         <img src="assets/images/cartao.png" alt="Imagens dos Cartão Savegnago">
@@ -110,34 +109,34 @@
 
 
             </div>
-        </section>
+    </section>
 
-        <div class="desc">
-        <div id="container-porcento">
-            <div class="porcento">
-                <img src="assets/images/percentage-discount.svg">
-                <div id="container-perc">
-                    <h3>Descontos <br> Exclusivos</h3>
-                </div>
-            </div>
-        </div>
+    <section>
 
-        <div id="container-juros">
-            <div class="juros">
-                <img src="assets/images/coin.svg" alt="Imagem do símbolo porcentagem">
-                <div class="container-perc">
-                    <h3>Descontos <br> Exclusivos</h3>
+            <div class="flex">
+                 <div class="item flex-item-1">
+                     <img src="assets/images/percentage-discount.svg" width="30,77" height="32" alt="Imagem de porcentagem">
+                     <p>Descontos <br> Exclusivos</p>
                 </div>
+
+                <div class="item flex-item-1">
+                        <img src="assets/images/coin.svg" width="32" height="23,27" alt="Imagem de porcentagem">
+                        <p>3x s/ juros <br> 6x no bazar</p>
+                   </div>
             </div>
-        </div>
-    </div>
+
+
+    </section>
+
+
 
 
         <h4>*Esta condição pode ser suspensa sem aviso prévio</h4>
 
 
-
+        </div>
     </main>
+    <!--Fim do MAIN-->
 
     <!-- <footer>
         <p>Aqui vai o footer</p>
