--- a/index.html
+++ b/index.html
@@ -9,134 +9,136 @@
 </head>
 
 <body>
+    <!--Cabeçalho-->
+    <header>
+        <div class="flex-header">
+            <a href="#"><img src="assets/images/menu.png"></a>
+            <a href="#"> <img src="assets/images/logo.png"></a>
+            <a href="#"><img src="assets/images/cartCarrinho.png"></a>
 
-    <!-- <header>
-        <p>Aqui vai o header</p>
-    </header> -->
+
+            <input type="search" placeholder="Faça sua busca aqui..." class="busca"><label for="buscar">
+            <img src="assets/images/Caminho.png" class="search"></label><img src="assets/images/menuBusca.png">
 
 
-    <!--inicio do MAIN-->
+    </header>
+    <!--Fim do Cabeçalho-->
 
+    <!--Container Principal Main-->
     <main class="main" id="main">
-        <div class="container-main">
+            <div class="container-main">
 
-            <!-- BUTTON VOLTAR -->
-            <div class="row">
-                <div class="voltar">
-                    <button class="btn btn-voltar" href="#">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="8" height="12" viewBox="0 0 8 12">
-                            <g>
+                <!-- Botão voltar -->
+                <div class="row">
+                    <div class="voltar">
+                        <button class="btn btn-voltar" href="#">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="8" height="12" viewBox="0 0 8 12">
                                 <g>
-                                    <path fill="#8f909e"
-                                        d="M6.014 11.42L.77 6.173a.284.284 0 0 1 0-.404L6.014.524a.293.293 0 0 1 .403 0c.11.112.11.292 0 .403l-4.758 4.76v.57l4.757 4.76a.286.286 0 0 1 0 .403.291.291 0 0 1-.402 0z" />
-                                    <path fill="none" stroke="#8f909e" stroke-miterlimit="50"
-                                        d="M6.014 11.42v0L.77 6.173a.284.284 0 0 1 0-.404L6.014.524a.293.293 0 0 1 .403 0c.11.112.11.292 0 .403l-4.758 4.76v.57l4.757 4.76a.286.286 0 0 1 0 .403.291.291 0 0 1-.402 0z" />
+                                    <g>
+                                        <path fill="#8f909e"
+                                            d="M6.014 11.42L.77 6.173a.284.284 0 0 1 0-.404L6.014.524a.293.293 0 0 1 .403 0c.11.112.11.292 0 .403l-4.758 4.76v.57l4.757 4.76a.286.286 0 0 1 0 .403.291.291 0 0 1-.402 0z" />
+                                        <path fill="none" stroke="#8f909e" stroke-miterlimit="50"
+                                            d="M6.014 11.42v0L.77 6.173a.284.284 0 0 1 0-.404L6.014.524a.293.293 0 0 1 .403 0c.11.112.11.292 0 .403l-4.758 4.76v.57l4.757 4.76a.286.286 0 0 1 0 .403.291.291 0 0 1-.402 0z" />
+                                    </g>
                                 </g>
-                            </g>
-                        </svg>VOLTAR
-                    </button>
+                            </svg>voltar
+                        </button>
+                    </div>
                 </div>
-            </div>
-            <!-- / BUTTON VOLTAR -->
+                <!--Fim Botão voltar -->
 
-    <section>
-            <div class="bg-gray">
+        <section>
+            <div class="container bg-gray">
                 <div class="row">
                     <h1>Cartões Savegnago</h1>
                 </div>
-                    <div class="row">
-                        <div class="flex-ok">
-                            <svg xmlns="http://www.w3.org/2000/svg" width="56" height="64" viewBox="0 0 56 64">
+
+                        <svg xmlns="http://www.w3.org/2000/svg" width="56" height="64" viewBox="0 0 56 64" class="flex-ok">
+                            <g>
                                 <g>
                                     <g>
                                         <g>
                                             <g>
-                                                <g>
-                                                    <path fill="#004a99"
-                                                        d="M46.667 41.5H50.4c1.03 0 1.867.841 1.867 1.875A1.873 1.873 0 0 1 50.4 45.25h-3.733c-1.03 0-1.867.84-1.867 1.875 0 1.035.836 1.875 1.867 1.875H50.4c1.03 0 1.867.841 1.867 1.875A1.873 1.873 0 0 1 50.4 52.75h-3.733c-1.03 0-1.867.84-1.867 1.875 0 1.035.836 1.875 1.867 1.875 1.029 0 1.866.841 1.866 1.875a1.873 1.873 0 0 1-1.866 1.875H31.029c-1.81 0-3.598-.291-5.314-.866l-7.048-2.36V33.822c2.928-.558 5.794-2.42 8.381-5.47 2.526-2.977 4.575-6.924 5.48-10.56l.663-2.667h.409c2.058 0 3.733 1.683 3.733 3.75v1.874c0 2.517-.784 7.346-1.787 9.501h-3.813c-1.03 0-1.866.84-1.866 1.875 0 1.035.836 1.875 1.866 1.875H50.4c1.03 0 1.867.841 1.867 1.875A1.873 1.873 0 0 1 50.4 37.75h-3.733c-1.03 0-1.867.84-1.867 1.875 0 1.035.836 1.875 1.867 1.875zM14.933 58.375a1.873 1.873 0 0 1-1.866 1.875H3.733v-30h9.334c1.029 0 1.866.841 1.866 1.875zm39.637-18.75a5.618 5.618 0 0 0 1.43-3.75c0-3.101-2.513-5.625-5.6-5.625H39.531c1.076-3.281 1.536-7.635 1.536-9.501v-1.874c0-4.135-3.35-7.5-7.467-7.5h-1.867c-.856 0-1.603.585-1.81 1.42l-1.017 4.086c-1.425 5.723-5.948 12.037-10.63 13.184-.82-2.085-2.845-3.565-5.21-3.565h-11.2C.837 26.5 0 27.34 0 28.375v33.75C0 63.16.836 64 1.867 64h11.2a5.604 5.604 0 0 0 5.055-3.206l6.413 2.147A20.405 20.405 0 0 0 31.03 64h15.638c3.087 0 5.6-2.524 5.6-5.625a5.62 5.62 0 0 0-.394-2.072 5.632 5.632 0 0 0 2.697-9.178 5.618 5.618 0 0 0 1.43-3.75 5.618 5.618 0 0 0-1.43-3.75z" />
-                                                </g>
-                                            </g>
-                                        </g>
-                                        <g>
-                                            <g>
-                                                <g>
-                                                    <path fill="#004a99"
-                                                        d="M7.467 54.625a1.87 1.87 0 0 1 1.866-1.875c1.031 0 1.867.84 1.867 1.875A1.87 1.87 0 0 1 9.333 56.5a1.87 1.87 0 0 1-1.866-1.875z" />
-                                                </g>
-                                            </g>
-                                        </g>
-                                        <g>
-                                            <g>
-                                                <g>
-                                                    <path fill="#004a99"
-                                                        d="M35.467 0A1.87 1.87 0 0 0 33.6 1.875V5.75a1.87 1.87 0 0 0 1.867 1.875 1.87 1.87 0 0 0 1.866-1.875V1.875A1.87 1.87 0 0 0 35.467 0z" />
-                                                </g>
-                                            </g>
-                                        </g>
-                                        <g>
-                                            <g>
-                                                <g>
-                                                    <path fill="#004a99"
-                                                        d="M27.547 8.268l-2.64-2.651a1.86 1.86 0 0 0-2.64 0 1.88 1.88 0 0 0 0 2.651l2.64 2.652a1.86 1.86 0 0 0 2.64 0 1.88 1.88 0 0 0 0-2.652z" />
-                                                </g>
-                                            </g>
-                                        </g>
-                                        <g>
-                                            <g>
-                                                <g>
-                                                    <path fill="#004a99"
-                                                        d="M48.666 5.617a1.86 1.86 0 0 0-2.64 0l-2.64 2.651a1.88 1.88 0 0 0 0 2.652 1.86 1.86 0 0 0 2.64 0l2.64-2.652a1.88 1.88 0 0 0 0-2.651z" />
-                                                </g>
+                                            <path fill="#004a99"
+                                             d="M46.667 41.5H50.4c1.03 0 1.867.841 1.867 1.875A1.873 1.873 0 0 1 50.4 45.25h-3.733c-1.03 0-1.867.84-1.867 1.875 0 1.035.836 1.875 1.867 1.875H50.4c1.03 0 1.867.841 1.867 1.875A1.873 1.873 0 0 1 50.4 52.75h-3.733c-1.03 0-1.867.84-1.867 1.875 0 1.035.836 1.875 1.867 1.875 1.029 0 1.866.841 1.866 1.875a1.873 1.873 0 0 1-1.866 1.875H31.029c-1.81 0-3.598-.291-5.314-.866l-7.048-2.36V33.822c2.928-.558 5.794-2.42 8.381-5.47 2.526-2.977 4.575-6.924 5.48-10.56l.663-2.667h.409c2.058 0 3.733 1.683 3.733 3.75v1.874c0 2.517-.784 7.346-1.787 9.501h-3.813c-1.03 0-1.866.84-1.866 1.875 0 1.035.836 1.875 1.866 1.875H50.4c1.03 0 1.867.841 1.867 1.875A1.873 1.873 0 0 1 50.4 37.75h-3.733c-1.03 0-1.867.84-1.867 1.875 0 1.035.836 1.875 1.867 1.875zM14.933 58.375a1.873 1.873 0 0 1-1.866 1.875H3.733v-30h9.334c1.029 0 1.866.841 1.866 1.875zm39.637-18.75a5.618 5.618 0 0 0 1.43-3.75c0-3.101-2.513-5.625-5.6-5.625H39.531c1.076-3.281 1.536-7.635 1.536-9.501v-1.874c0-4.135-3.35-7.5-7.467-7.5h-1.867c-.856 0-1.603.585-1.81 1.42l-1.017 4.086c-1.425 5.723-5.948 12.037-10.63 13.184-.82-2.085-2.845-3.565-5.21-3.565h-11.2C.837 26.5 0 27.34 0 28.375v33.75C0 63.16.836 64 1.867 64h11.2a5.604 5.604 0 0 0 5.055-3.206l6.413 2.147A20.405 20.405 0 0 0 31.03 64h15.638c3.087 0 5.6-2.524 5.6-5.625a5.62 5.62 0 0 0-.394-2.072 5.632 5.632 0 0 0 2.697-9.178 5.618 5.618 0 0 0 1.43-3.75 5.618 5.618 0 0 0-1.43-3.75z" />
                                             </g>
                                         </g>
                                     </g>
+                                <g>
+                            <g>
+                            <g>
+                                <path fill="#004a99"
+                                d="M7.467 54.625a1.87 1.87 0 0 1 1.866-1.875c1.031 0 1.867.84 1.867 1.875A1.87 1.87 0 0 1 9.333 56.5a1.87 1.87 0 0 1-1.866-1.875z" />
+                            </g>
+                            <g>
+                                <g>
+                                    <g>
+                                        <path fill="#004a99"
+                                        d="M35.467 0A1.87 1.87 0 0 0 33.6 1.875V5.75a1.87 1.87 0 0 0 1.867 1.875 1.87 1.87 0 0 0 1.866-1.875V1.875A1.87 1.87 0 0 0 35.467 0z" />
+                                    </g>
                                 </g>
-                            </svg>
-                        </div>
+                            </g>
+                            <g>
+                                <g>
+                                    <g>
+                                        <path fill="#004a99"
+                                        d="M27.547 8.268l-2.64-2.651a1.86 1.86 0 0 0-2.64 0 1.88 1.88 0 0 0 0 2.651l2.64 2.652a1.86 1.86 0 0 0 2.64 0 1.88 1.88 0 0 0 0-2.652z" />
+                                    </g>
+                                </g>
+                            </g>
+                            <g>
+                                <g>
+                                    <g>
+                                        <path fill="#004a99"
+                                        d="M48.666 5.617a1.86 1.86 0 0 0-2.64 0l-2.64 2.651a1.88 1.88 0 0 0 0 2.652 1.86 1.86 0 0 0 2.64 0l2.64-2.652a1.88 1.88 0 0 0 0-2.651z" />
+                                    </g>
+                                </g>
+                            </g>
 
-                            <p class="texto-main">
-                                Com o nosso cartão savegnago e o cartão alimentação savegnago você economiza muito mais!
-                            </p>
-                    </div>
-                </div>
+                        </svg>
 
+                    <p class="texto-main">
+                        Com o nosso cartão savegnago e o cartão alimentação savegnago você economiza muito mais!
+                    </p>
 
-                <div class="row">
-                    <div class="banner-cartao">
-                        <img src="assets/images/cartao.png" alt="Imagens dos Cartão Savegnago">
-                    </div>
-                </div>
-
+                    <img src="assets/images/cartao.png" class="banner-cartao" alt="Imagens dos Cartão Savegnago">
 
             </div>
-    </section>
+        </section>
 
-    <section>
+        <section>
+            <div class="flex">
+                <div class="item flex-item-1">
+                    <img src="assets/images/percentage-discount.svg" class="percentage" width="30,77" height="32" alt="Imagem de porcentagem">
+                    <p>Descontos <br> Exclusivos</p>
+                </div>
+
+                <div class="item flex-item-2">
+                    <img src="assets/images/Grupo4106.png" class="Grupo4106" alt="Imagem de porcentagem">
+                    <p>3x s/ juros <br> 6x no bazar</p>
+                </div>
+            </div>
 
             <div class="flex">
-                 <div class="item flex-item-1">
-                     <img src="assets/images/percentage-discount.svg" width="30,77" height="32" alt="Imagem de porcentagem">
-                     <p>Descontos <br> Exclusivos</p>
+                    <div class="item flex-item-3">
+                        <img src="assets/images/coin.svg" class="coin" alt="Imagem de porcentagem">
+                        <p>Cupons <br> em dobro</p>
+                    </div>
+
+                    <div class="item flex-item-4">
+                        <img src="assets/images/img-netpoints.png" class="netpoints" alt="Imagem de porcentagem">
+                        <p>Netpoints <br> em dobro*</p>
+                    </div>
                 </div>
-
-                <div class="item flex-item-1">
-                        <img src="assets/images/coin.svg" width="32" height="23,27" alt="Imagem de porcentagem">
-                        <p>3x s/ juros <br> 6x no bazar</p>
-                   </div>
-            </div>
-
-
-    </section>
-
-
+        </section>
 
 
         <h4>*Esta condição pode ser suspensa sem aviso prévio</h4>
 
 
-        </div>
+
     </main>
-    <!--Fim do MAIN-->
+    <!--Fim do Container Principal Main-->
 
     <!-- <footer>
         <p>Aqui vai o footer</p>
