included buttons and picture of our card

--- a/index.html
+++ b/index.html
@@ -131,17 +131,27 @@
                     </div>
                 </div>
         </section>
-
-
         <h4>*Esta condição pode ser suspensa sem aviso prévio</h4>
 
+        <section>
+            <p class="text">Clique abaixo para saber mais sobre os nossos cartões:</p>
 
+            <div class="btn-nosso-cartao">
+                <button class="btn-nc" href="#"> Nosso Cartão Savegnago</button>
+            </div>
 
+            <div class="btn-cart-alim">
+                <button class="btn-ca" href="#"> Cartão alimentação Savegnago</button>
+            </div>
+
+            <img src="assets/images/cartão_savegnago.png" width="343" height="96" class="cart-sav" alt="Imagem dos Cartões Savegnago">
+
+        </section>
     </main>
     <!--Fim do Container Principal Main-->
 
-    <!-- <footer>
-        <p>Aqui vai o footer</p>
+    <!--<footer>
+        
     </footer> -->
 
     <script src="assets/main.js"></script>
