--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Savegnago</title>
     <link rel="stylesheet" href="assets/css/main.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 
 <body>
@@ -136,23 +137,194 @@
         <section>
             <p class="text">Clique abaixo para saber mais sobre os nossos cartões:</p>
 
-            <div class="btn-nosso-cartao">
-                <button class="btn-nc" href="#"> Nosso Cartão Savegnago</button>
-            </div>
+            <div class="btns">
+                <div class="btn-nosso-cartao">
+                    <button class="btn-nc" href="#"> Nosso Cartão Savegnago</button>
+                </div>
 
-            <div class="btn-cart-alim">
-                <button class="btn-ca" href="#"> Cartão alimentação Savegnago</button>
+                 <div class="btn-cart-alim">
+                     <button class="btn-ca" href="#"> Cartão alimentação Savegnago</button>
+                 </div>
             </div>
 
             <img src="assets/images/cartão_savegnago.png" width="343" height="96" class="cart-sav" alt="Imagem dos Cartões Savegnago">
 
+
+            <div class="row midias">
+
+                <a href="#"><img src="assets/images/face.png" class="face-icone"></a>
+                <a href="#"><img src="assets/images/instagran.png" class="insta-icone"></a>
+                <a href="#"><img src="assets/images/twitter.png" class="twit-icone"></a>
+                <a href="#"><img src="assets/images/youtube.png" class="you-icone"></a>
+                <a href="#"><img src="assets/images/setaCima.png" class="up"></a>
+            </div>
         </section>
     </main>
-    <!--Fim do Container Principal Main-->
+    <!--Fim do MAIN-->
+    <!--Inicio do Footer-->
+    <div class="menu-footer">
+            <div class="item menu-footer">
+                <div class="item menu-footer2">
+                    <h4>INSTITUCIONAL</h4>
+                    <i class="ico-plus hidden visible-xs-block"></i> <!--aqui o icone mais, imagem-->
 
-    <!--<footer>
-        
-    </footer> -->
+                    <h4>PRODUTOS</h4>
+                    <i class="ico-plus hidden visible-xs-block"></i> <!--aqui o icone mais, imagem-->
+
+                    <h4>SERVIÇOS</h4>
+                    <i class="ico-plus hidden visible-xs-block"></i> <!--aqui o icone mais, imagem-->
+
+                    <h4>FALE CONOSCO</h4>
+                    <i class="ico-plus hidden visible-xs-block"></i> <!--aqui o icone mais, imagem-->
+                </div>
+            </div>
+
+    <div class="footer-info">
+
+            <p class="item info">A venda e o consumo de bebidas alcoólicas são proibidas para menores de 18 anos. Bebida Alcoólica
+                    pode causar dependência Quimica e, em excesso, Provoca graves males à saúde. Beba com moderação.
+                    Em caso de divergência de preços no
+                    site, é válido o valor do Carrinho de Compras. Produtos, preços, ofetas e condições de pagamento
+                    são válidas exclusivamente para a loja eletrônica durante o dia de hoje, sujeitas a alterações
+                    sem prévia notificação. Os preços previstos
+                    no site prevalecem aos demais anunciados em outros meios de comunicação, incluindo os veiculados
+                    em redes sociais, email e sites de buscas. As mercadorias em promoção têm quantidades limitadas
+                    por clientes de acordo com o artigo
+                    39 – I CDC, Lei nº. 8.078 de 11/09/90 e artigo 12 – III Decreto nº. 2.181 de 20/03/97
+            </p>
+
+    </div>
+
+    <div class="footer-pgtos">
+            <div class="item pgtos">
+                <p>Formas de Pagamentos</p>
+                <img src="assets/images/Grupo4174.png" alt="Imagem dos cartões aceitos pelo supermercado">
+            </div>
+    </div>
+
+    <div class="footer-st-seguro">
+            <div class="st-seguro">
+                <p>Site Seguro</p>
+                <img src="assets/images/Grupo4317.png" alt="Imagem">
+            </div>
+    </div>
+
+
+<!--
+
+                <div class="infos">
+                    <p class="footerTitle">Formas de pagamento</p>
+                    <img src="img/payments.png">
+                    <Br><br>
+                    <p class="footerTitle">Site Seguro</p>
+                    <div class="imgFooter">
+
+
+                        <img src="img/vtex.png" class="vtex"> <img src="img/ouro.png" class="ouro"> <img
+                            src="img/lets.png" class="lets">
+
+
+
+                    </div>
+                    <hr>
+                    <div class="copyright">
+                        <p>©2019 SAVEGNAGO - todos os direitos reservados. Savegnago Supermercados Ltda. - cnpj:
+                            71.322.150/0039-32. - endereço: Avenida Nossa Senhora Aparecida, 2021 - cep: 14170-150 |
+                            Sertãozinho (SP)</p>
+
+
+                    </div>
+                    <div class="mechanics">
+                        <img src="img/devwith.png" class="devwith">
+                        <img src="img/rocketflow.png" class="rocketflow">
+                        <img src="img/corebiz.png" class="corebiz"><br>
+                        <img src="img/powered.png" class="powered">
+                    </div>
+                </div>
+
+            </div>
+            <div class="footerdesk">
+                <div class="row">
+                    <div class="footermain">
+                        <div class="institucional">
+                            <p class="strong">INSTITUCIONAL</p>
+                            <p>Quem somos</p></a>
+                            <p>Nossas Lojas</p>
+                            <p>Tabloide de ofertas</p>
+                            <p>Cartões Savegnago</p>
+                            <p>Star cine</p>
+                            <p>Trabalhe conosco</p>
+                        </div>
+                        <div class="sobrenos">
+                            <p class="strong">SOBRE O SERVIÇO</p>
+                            <p>Pagamento</p>
+                            <p>Entrega</p>
+                            <p>Segurança e privacidade</p>
+                            <p>Troca e devolução</p>
+                        </div>
+
+                        <div class="ajudaesup">
+                            <p class="strong">AJUDA E SUPORTE</p>
+                            <p>Fale conosco</p>
+                        </div>
+                        <div class="campanhas">
+                            <p class="strong">CAMPANHAS</p>
+                            <p>Ofertas</p>
+                            <p>Expovinho</p>
+                            <p>Aniversário</p>
+                        </div>
+                        <div class="contato">
+                            <p class="strong">ATENDIMENTO</p>
+                            <p class="red">0800 016 6680 - 0300 016 6680
+                            </p>
+                            <p>Segunda à Sábado das 8h às 18hx </p>
+                        </div>
+                    </div>
+                </div>
+                <br>
+                <div class="aviso">
+                    <p>A venda e o consumo de bebidas alcoólicas são proibidas para menores de 18 anos. Bebida Alcoólica
+                        pode causar dependência Quimica e, em excesso, Provoca graves males à saúde. Beba com moderação.
+                        Em caso de divergência de preços no
+                        site, é válido o valor do Carrinho de Compras. Produtos, preços, ofetas e condições de pagamento
+                        são válidas exclusivamente para a loja eletrônica durante o dia de hoje, sujeitas a alterações
+                        sem prévia notificação. Os preços previstos
+                        no site prevalecem aos demais anunciados em outros meios de comunicação, incluindo os veiculados
+                        em redes sociais, email e sites de buscas. As mercadorias em promoção têm quantidades limitadas
+                        por clientes de acordo com o artigo
+                        39 – I CDC, Lei nº. 8.078 de 11/09/90 e artigo 12 – III Decreto nº. 2.181 de 20/03/97.</p>
+                </div>
+                <div class="ferramentas">
+                    <div class="column1">
+                        <p class="strong">FORMAS DE PAGAMENTO</p>
+
+                        <img src="img/payments.png">
+                    </div>
+                    <div class="column1">
+                        <p class="strong">SITE SEGURO</p>
+                        <img src="img/vtex.png">
+                        <img src="img/ouro.png" class="ouro">
+                        <img src="img/lets.png" class="encrypt">
+                    </div>
+                </div>
+            </div>
+            <hr class="linhafooter">
+            <div class="copyright">
+                <p class="right">
+
+                    ©2019 SAVEGNAGO - todos os direitos reservados.</br>
+                    Savegnago Supermercados Ltda. - cnpj: 71.322.150/0039-32. - endereço: Avenida Nossa Senhora
+                    Aparecida, 2021 - cep: 14170-150 | Sertãozinho (SP)
+                </p>
+                <div class="mechs">
+                    <img src="img/devwith.png" class="dev"><img src="img/rocketflow.png" class="foguetinho"><img
+                        src="img/corebiz.png" class="core">
+                    <p class="poweredby">powered by</p> <img src="img/vtexmini.png" class="mini">
+                </div>
+            </div>
+        </footer>-->
+    </footer>
+
 
     <script src="assets/main.js"></script>
 </body>
