--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
     <div class="footer-pgtos">
             <div class="item pgtos">
                 <p>Formas de Pagamentos</p>
-                <img src="assets/images/Grupo4174.png" alt="Imagem dos cartões aceitos pelo supermercado">
+                <!--<img src="assets/images/Grupo4174.png" alt="Imagem dos cartões aceitos pelo supermercado">-->
             </div>
     </div>
 
