--- a/index.html
+++ b/index.html
@@ -151,12 +151,13 @@
 
 
             <div class="row midias">
-
-                <a href="#"><img src="assets/images/face.png" class="face-icone"></a>
-                <a href="#"><img src="assets/images/instagran.png" class="insta-icone"></a>
-                <a href="#"><img src="assets/images/twitter.png" class="twit-icone"></a>
-                <a href="#"><img src="assets/images/youtube.png" class="you-icone"></a>
-                <a href="#"><img src="assets/images/setaCima.png" class="up"></a>
+                <div class="icones">
+                     <a href="#"><img src="assets/images/face.png" class="face-icone"></a>
+                     <a href="#"><img src="assets/images/instagran.png" class="insta-icone"></a>
+                     <a href="#"><img src="assets/images/twitter.png" class="twit-icone"></a>
+                     <a href="#"><img src="assets/images/youtube.png" class="you-icone"></a>
+                     <a href="#"><img src="assets/images/setaCima.png" class="up"></a>
+                </div>
             </div>
         </section>
     </main>
@@ -182,13 +183,13 @@
     <div class="footer-info">
 
             <p class="item info">A venda e o consumo de bebidas alcoólicas são proibidas para menores de 18 anos. Bebida Alcoólica
-                    pode causar dependência Quimica e, em excesso, Provoca graves males à saúde. Beba com moderação.
+                    pode causar dependência Quimica e, em excesso, Provoca graves males à saúde. Beba com moderação.<br> <br>
                     Em caso de divergência de preços no
                     site, é válido o valor do Carrinho de Compras. Produtos, preços, ofetas e condições de pagamento
                     são válidas exclusivamente para a loja eletrônica durante o dia de hoje, sujeitas a alterações
                     sem prévia notificação. Os preços previstos
                     no site prevalecem aos demais anunciados em outros meios de comunicação, incluindo os veiculados
-                    em redes sociais, email e sites de buscas. As mercadorias em promoção têm quantidades limitadas
+                    em redes sociais, email e sites de buscas. <br><br> As mercadorias em promoção têm quantidades limitadas
                     por clientes de acordo com o artigo
                     39 – I CDC, Lei nº. 8.078 de 11/09/90 e artigo 12 – III Decreto nº. 2.181 de 20/03/97
             </p>
@@ -197,132 +198,41 @@
 
     <div class="footer-pgtos">
             <div class="item pgtos">
-                <p>Formas de Pagamentos</p>
-                <!--<img src="assets/images/Grupo4174.png" alt="Imagem dos cartões aceitos pelo supermercado">-->
+                <p>FORMAS DE PAGAMENTOS</p>
+                <img src="assets/images/Grupo4174.png" class="group-pagto" alt="Imagem dos cartões aceitos pelo supermercado">
             </div>
     </div>
 
     <div class="footer-st-seguro">
             <div class="st-seguro">
-                <p>Site Seguro</p>
-                <img src="assets/images/Grupo4317.png" alt="Imagem">
+                <p>SITE SEGURO</p>
+                <img src="assets/images/Grupo4317.png" class="group-st-seguro" alt="Imagem">
             </div>
     </div>
 
+    <hr />
 
-<!--
+    <div class="footer-copyright">
+        <p class="copy">
+            ©2019 SAVEGNAGO - todos os direitos reservados.</br>
+            Savegnago Supermercados Ltda. - cnpj: 71.322.150/0039-32. - endereço: Avenida Nossa Senhora
+            Aparecida, 2021 - cep: 14170-150 | Sertãozinho (SP)
+        </p>
+    </div>
 
-                <div class="infos">
-                    <p class="footerTitle">Formas de pagamento</p>
-                    <img src="img/payments.png">
-                    <Br><br>
-                    <p class="footerTitle">Site Seguro</p>
-                    <div class="imgFooter">
+    <div class="container flex-footer-empresa">
 
-
-                        <img src="img/vtex.png" class="vtex"> <img src="img/ouro.png" class="ouro"> <img
-                            src="img/lets.png" class="lets">
-
-
-
-                    </div>
-                    <hr>
-                    <div class="copyright">
-                        <p>©2019 SAVEGNAGO - todos os direitos reservados. Savegnago Supermercados Ltda. - cnpj:
-                            71.322.150/0039-32. - endereço: Avenida Nossa Senhora Aparecida, 2021 - cep: 14170-150 |
-                            Sertãozinho (SP)</p>
+                <img src="assets/images/Grupo4318.png" class="develop"><img src="assets/images/União23.png" class="core">
 
 
-                    </div>
-                    <div class="mechanics">
-                        <img src="img/devwith.png" class="devwith">
-                        <img src="img/rocketflow.png" class="rocketflow">
-                        <img src="img/corebiz.png" class="corebiz"><br>
-                        <img src="img/powered.png" class="powered">
-                    </div>
-                </div>
 
-            </div>
-            <div class="footerdesk">
-                <div class="row">
-                    <div class="footermain">
-                        <div class="institucional">
-                            <p class="strong">INSTITUCIONAL</p>
-                            <p>Quem somos</p></a>
-                            <p>Nossas Lojas</p>
-                            <p>Tabloide de ofertas</p>
-                            <p>Cartões Savegnago</p>
-                            <p>Star cine</p>
-                            <p>Trabalhe conosco</p>
-                        </div>
-                        <div class="sobrenos">
-                            <p class="strong">SOBRE O SERVIÇO</p>
-                            <p>Pagamento</p>
-                            <p>Entrega</p>
-                            <p>Segurança e privacidade</p>
-                            <p>Troca e devolução</p>
+                        <div class="container flex-footer">
+                                <img src="assets/images/Grupo2485.png " class="item-power">
                         </div>
 
-                        <div class="ajudaesup">
-                            <p class="strong">AJUDA E SUPORTE</p>
-                            <p>Fale conosco</p>
-                        </div>
-                        <div class="campanhas">
-                            <p class="strong">CAMPANHAS</p>
-                            <p>Ofertas</p>
-                            <p>Expovinho</p>
-                            <p>Aniversário</p>
-                        </div>
-                        <div class="contato">
-                            <p class="strong">ATENDIMENTO</p>
-                            <p class="red">0800 016 6680 - 0300 016 6680
-                            </p>
-                            <p>Segunda à Sábado das 8h às 18hx </p>
-                        </div>
-                    </div>
-                </div>
-                <br>
-                <div class="aviso">
-                    <p>A venda e o consumo de bebidas alcoólicas são proibidas para menores de 18 anos. Bebida Alcoólica
-                        pode causar dependência Quimica e, em excesso, Provoca graves males à saúde. Beba com moderação.
-                        Em caso de divergência de preços no
-                        site, é válido o valor do Carrinho de Compras. Produtos, preços, ofetas e condições de pagamento
-                        são válidas exclusivamente para a loja eletrônica durante o dia de hoje, sujeitas a alterações
-                        sem prévia notificação. Os preços previstos
-                        no site prevalecem aos demais anunciados em outros meios de comunicação, incluindo os veiculados
-                        em redes sociais, email e sites de buscas. As mercadorias em promoção têm quantidades limitadas
-                        por clientes de acordo com o artigo
-                        39 – I CDC, Lei nº. 8.078 de 11/09/90 e artigo 12 – III Decreto nº. 2.181 de 20/03/97.</p>
-                </div>
-                <div class="ferramentas">
-                    <div class="column1">
-                        <p class="strong">FORMAS DE PAGAMENTO</p>
 
-                        <img src="img/payments.png">
-                    </div>
-                    <div class="column1">
-                        <p class="strong">SITE SEGURO</p>
-                        <img src="img/vtex.png">
-                        <img src="img/ouro.png" class="ouro">
-                        <img src="img/lets.png" class="encrypt">
-                    </div>
-                </div>
-            </div>
-            <hr class="linhafooter">
-            <div class="copyright">
-                <p class="right">
+        </div>
 
-                    ©2019 SAVEGNAGO - todos os direitos reservados.</br>
-                    Savegnago Supermercados Ltda. - cnpj: 71.322.150/0039-32. - endereço: Avenida Nossa Senhora
-                    Aparecida, 2021 - cep: 14170-150 | Sertãozinho (SP)
-                </p>
-                <div class="mechs">
-                    <img src="img/devwith.png" class="dev"><img src="img/rocketflow.png" class="foguetinho"><img
-                        src="img/corebiz.png" class="core">
-                    <p class="poweredby">powered by</p> <img src="img/vtexmini.png" class="mini">
-                </div>
-            </div>
-        </footer>-->
     </footer>
 
 
